# src/controllers/auth.js
@@ -4,7 +4,10 @@ const {formatResponse}=require("../utils/helper");
 const { createjwt } = require('../utils/jwt');
 module.exports={
     login: async(req,res)=>{
-        const {email,password}=req.body;
+        // body 是在 swagger 主体里面写的
+        // const {email,password}=req.body;
+        // 用parms 从url 中获取 方便react 取值
+        const {email,password}=req.params;
         const user=await userserveice.verifyUserPassword(email,password);
         if(!user){
             return formatResponse(res,"invalid email or password",401);
