# swagger/swagger.yaml
@@ -12,8 +12,7 @@ servers:
 tags:
   - name: "users"
     description: "Operations about users"
-  - name: "auth"
-    description: "User authentication"
+  
 
 paths:
   /users/register:
@@ -49,24 +48,25 @@ paths:
       security:
         - Bearer: []
 
-  /auth:
-    post:
-      tags:
-        - "auth"
-      summary: "login user"
-      operationId: "login"
-      requestBody:
-        description: "Required user fields"
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Auth"
-      responses:
-        200:
-          description: "successful"
-        400:
-          description: "Invalid username or password"
+
+  # /auth:
+  #   post:
+  #     tags:
+  #       - "auth"
+  #     summary: "login user"
+  #     operationId: "login"
+  #     requestBody:
+  #       description: "Required user fields"
+  #       required: true
+  #       content:
+  #         application/json:
+  #           schema:
+  #             $ref: "#/components/schemas/Auth"
+  #     responses:
+  #       200:
+  #         description: "successful"
+  #       400:
+  #         description: "Invalid username or password"
   # --------------------------------- houses start -------------------------- #
   /houses:
     get:
@@ -165,10 +165,10 @@ components:
           type: "string"
         description:
           type: "string"
-    Auth:
-      type: "object"
-      properties:
-        email:
-          type: "string"
-        password:
-          type: "string"
+    # Auth:
+    #   type: "object"
+    #   properties:
+    #     email:
+    #       type: "string"
+    #     password:
+    #       type: "string"
